[package]
name = "char_stream"
version = "0.1.8"
authors = ["JunSuzukiJapan <jun.suzuki.japan@gmail.com>"]
repository = "https://github.com/JunSuzukiJapan/char_stream"
keywords = ["util", "char", "stream"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
description = "Unified character reading interface to str, String, bytes, File and Stdin for Rust language."

[dependencies]

[dev-dependencies]
tempfile = "2.2.0"